--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.6",
+    "@react-pdf/renderer": "^4.3.0",
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
@@ -28,7 +29,9 @@
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
     "mammoth": "^1.9.0",
     "navigation": "^6.2.0",
@@ -36,9 +39,10 @@
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
     "openai": "^4.78.1",
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "^5.0.375",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-simple-wysiwyg": "^3.2.0",
